--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   http: ^1.1.0
+  syncfusion_flutter_gauges: ^20.4.52
 
 dev_dependencies:
   flutter_test:
