--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   syncfusion_flutter_gauges: ^20.4.52
+  syncfusion_flutter_charts: ^20.4.52
 
 dev_dependencies:
   flutter_test:
