--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   syncfusion_flutter_gauges: ^20.4.52
   syncfusion_flutter_charts: ^20.4.52
   intl: ^0.18.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
